--- a/infra/bicepconfig.json
+++ b/infra/bicepconfig.json
@@ -4,6 +4,9 @@
       "rules": {
         "no-unused-params": {
           "level": "warning"
+        },
+        "use-resource-id-functions": {
+          "level": "info"
         }
       }
     }
