--- a/src/DurableOrchestrator/Properties/launchSettings.json
+++ b/src/DurableOrchestrator/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "event_processing": {
+    "DurableOrchestrator": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7063",
+      "commandLineArgs": "--port 7071",
       "launchBrowser": false
     }
   }
