--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
       "type": "process",
       "problemMatcher": "$msCompile",
       "options": {
-        "cwd": "${workspaceFolder}/src\\DurableOrchestrator"
+        "cwd": "${workspaceFolder}/src/DurableOrchestrator"
       }
     },
     {
@@ -31,7 +31,7 @@
       },
       "problemMatcher": "$msCompile",
       "options": {
-        "cwd": "${workspaceFolder}/src\\DurableOrchestrator"
+        "cwd": "${workspaceFolder}/src/DurableOrchestrator"
       }
     },
     {
@@ -47,7 +47,7 @@
       "type": "process",
       "problemMatcher": "$msCompile",
       "options": {
-        "cwd": "${workspaceFolder}/src\\DurableOrchestrator"
+        "cwd": "${workspaceFolder}/src/DurableOrchestrator"
       }
     },
     {
@@ -64,14 +64,15 @@
       "dependsOn": "clean release (functions)",
       "problemMatcher": "$msCompile",
       "options": {
-        "cwd": "${workspaceFolder}/src\\DurableOrchestrator"
+        "cwd": "${workspaceFolder}/src/DurableOrchestrator"
       }
     },
     {
+      "label": "func: host start",
       "type": "func",
       "dependsOn": "build (functions)",
       "options": {
-        "cwd": "${workspaceFolder}/src\\DurableOrchestrator/bin/Debug/net8.0"
+        "cwd": "${workspaceFolder}/src/DurableOrchestrator/bin/Debug/net8.0"
       },
       "command": "host start",
       "isBackground": true,
