--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,13 @@
 {
   "recommendations": [
+    "ms-vscode.vscode-node-azure-pack",
     "ms-azuretools.vscode-azurefunctions",
-    "ms-dotnettools.csharp"
+    "ms-dotnettools.csharp",
+    "ms-azuretools.vscode-bicep",
+    "DurableFunctionsMonitor.durablefunctionsmonitor",
+    "EditorConfig.EditorConfig",
+    "humao.rest-client",
+    "ms-azuretools.vscode-docker",
+    "ms-vscode-remote.remote-containers"
   ]
 }
