Update GitHub workflow and Dockerfile

--- a/.github/workflows/durable-orchestrator.yml
+++ b/.github/workflows/durable-orchestrator.yml
@@ -7,13 +7,13 @@ on:
     branches:
       - main
     paths:
-      - src/DurableOrchestrator/**
+      - src/**
       - .github/workflows/durable-orchestrator.yml
   pull_request:
     branches:
       - main
     paths:
-      - src/DurableOrchestrator/**
+      - src/**
       - .github/workflows/durable-orchestrator.yml
   workflow_dispatch:
 
