--- a/.github/workflows/durable-orchestrator.yml
+++ b/.github/workflows/durable-orchestrator.yml
@@ -54,7 +54,8 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v5
         with:
-          context: src/DurableOrchestrator/.
+          context: src/.
+          file: src/DurableOrchestrator/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
