Add activity for chat completions

--- a/src/DurableOrchestrator/local.settings.json.template
+++ b/src/DurableOrchestrator/local.settings.json.template
@@ -1,12 +1,15 @@
 {
-  "IsEncrypted": false,
-  "Values": {
-    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-    "KEY_VAULT_URL": "",
-    "DOCUMENT_INTELLIGENCE_ENDPOINT": "",
-    "TEXT_ANALYTICS_ENDPOINT": "",
-    "OPENAI_ENDPOINT": "",
-    "OTLP_EXPORTER_ENDPOINT": "http://localhost:14317"
-  }
+    "IsEncrypted": false,
+    "Values": {
+        "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+        "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+        "KEY_VAULT_URL": "",
+        "DOCUMENT_INTELLIGENCE_ENDPOINT": "",
+        "TEXT_ANALYTICS_ENDPOINT": "",
+        "OPENAI_ENDPOINT": "",
+        "OPENAI_EMBEDDING_MODEL_DEPLOYMENT": "text-embedding-ada-002",
+        "OPENAI_COMPLETION_MODEL_DEPLOYMENT": "gpt-35-turbo",
+        "OPENAI_VISION_COMPLETION_MODEL_DEPLOYMENT": "gpt-4-vision-preview",
+        "OTLP_EXPORTER_ENDPOINT": "http://localhost:14317"
+    }
 }
