--- a/src/DurableOrchestrator.AzureStorage/DurableOrchestrator.AzureStorage.csproj
+++ b/src/DurableOrchestrator.AzureStorage/DurableOrchestrator.AzureStorage.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.DurableTask" Version="1.1.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    <PackageReference Include="Parquet.Net" Version="4.23.5" />
   </ItemGroup>
 
   <ItemGroup>
