Add Bicep support for event hub JSON to Parquet example

--- a/src/DurableOrchestrator/local.settings.json.template
+++ b/src/DurableOrchestrator/local.settings.json.template
@@ -3,6 +3,7 @@
     "Values": {
         "AzureWebJobsStorage": "UseDevelopmentStorage=true",
         "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+        "MANAGED_IDENTITY_CLIENT_ID": "",
         "KEY_VAULT_URL": "",
         "DOCUMENT_INTELLIGENCE_ENDPOINT": "",
         "TEXT_ANALYTICS_ENDPOINT": "",
